Commit to test on remote server
