# server/api/documents/get.py
@@ -1,0 +1,2 @@
+def get(document_id):
+    return document_id
