# server/api/documents/patch.py
@@ -1,0 +1,2 @@
+def patch(document_id, document_data):
+    return document_id, document_data
