# server/api/documents/post.py
@@ -1,0 +1,2 @@
+def post(document_data):
+    return document_data
