# server/api/projects/patch.py
@@ -1,0 +1,2 @@
+def patch(project_id, project_data):
+    return 'Not Implemented', 501
