# server/api/projects/put.py
@@ -1,2 +1,0 @@
-def put(project_id, project_data):
-    return project_id, project_data
